# google-flights-search

./: .env.example  .gitignore  CLAUDE.md  README.md  README_zh.md  pyproject.toml  pytest.ini  requirements.txt
examples/: basic_search.py
gf_search/: __init__.py  _utils.py  airline_apis.py  builder.py  fetcher.py  mcp.py  multi_city.py  parser.py  search.py  setup.py
tests/: conftest.py  test_builder.py  test_integration.py  test_multi_city.py  test_parser.py  test_setup.py  test_supplemental.py
