[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-flights-search"
version = "0.1.17"
description = "Google Flights client (SSR + Playwright fallback). Handles small/regional airports; multi-city with full segment enrichment via batchexecute chaining."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["google-flights", "flights", "travel", "scraping", "aviation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]
dependencies = [
    "primp>=1.1.0",
    "selectolax>=0.3.0",
    "rjsonc>=0.1.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
cdp = ["websocket-client>=1.0.0"]
# Stage 5 Playwright fallback (regional/small airports).
# After installing, also run: playwright install chromium
playwright = ["playwright>=1.40.0"]
# Windows-only: auto-extract Chrome session when Chrome is closed.
windows = [
    "pycryptodome>=3.0.0; sys_platform=='win32'",
    "pywin32>=300; sys_platform=='win32'",
]
full = [
    "mcp>=1.0.0",
    "websocket-client>=1.0.0",
    "playwright>=1.40.0",
    "pycryptodome>=3.0.0; sys_platform=='win32'",
    "pywin32>=300; sys_platform=='win32'",
]

[project.scripts]
gf-search-mcp = "gf_search.mcp:main"
gf-search-setup = "gf_search.setup:setup"

[project.urls]
Homepage = "https://github.com/NYCU-Chung/google-flights-search"
Issues = "https://github.com/NYCU-Chung/google-flights-search/issues"

[tool.hatch.build.targets.wheel]
packages = ["gf_search"]

[tool.hatch.build.targets.wheel.sources]
"gf_search/schedules.json" = "gf_search/schedules.json"
